--- a/jquery/package.json
+++ b/jquery/package.json
@@ -22,6 +22,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "jquery": "^3.5.1"
+    "@babel/polyfill": "^7.12.1",
+    "jquery": "^3.6.4"
   }
 }
